--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hacking Historical Texts Final Project Template (Change Me)
+title: Executions in the United States since 1977
 description: A description of your project (Change Me)
 plugins:
   - jekyll-relative-links
