--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ include:
   - LICENSE
   - PULL_REQUEST_TEMPLATE.md
   - README.md
-theme: jekyll-theme-midnight
+theme: jekyll-theme-time-machine
 source: ./pages
 collections_dir: ./pages
 includes_dir: _includes
